--- a/packages/wapm-packages/ruby/wapm.toml
+++ b/packages/wapm-packages/ruby/wapm.toml
@@ -1,15 +1,22 @@
 [package]
-name = "katei/ruby"
+# name = "katei/ruby"
+name = "Michael-F-Bryan/ruby"
 version = "0.1.2"
 description = "The Ruby Programming Language"
 license = "MIT"
 repository = "https://github.com/ruby/ruby.wasm"
 
 [[module]]
-name = "ruby"
+name = "ruby-cli"
 source = "dist/ruby.wasm"
 abi = "wasi"
 
+[[module]]
+name = "ruby"
+source = "dist/libruby.wasm"
+abi = "wasi"
+bindings = { wit-exports = "dist/rb-api-guest.wit", wit-bindgen = "0.1.0" }
+
 [[command]]
 name = "ruby"
-module = "ruby"
+module = "ruby-cli"
