--- a/packages/wapm-packages/ruby/wapm.toml
+++ b/packages/wapm-packages/ruby/wapm.toml
@@ -15,7 +15,7 @@ abi = "wasi"
 name = "ruby"
 source = "dist/libruby.wasm"
 abi = "wasi"
-bindings = { wit-exports = "dist/rb-api-guest.wit", wit-bindgen = "0.1.0" }
+bindings = { wit-exports = "dist/rb-abi-guest.wit", wit-bindgen = "0.1.0" }
 
 [[command]]
 name = "ruby"
