--- a/packages/npm-packages/ruby-wasm-wasi/package.json
+++ b/packages/npm-packages/ruby-wasm-wasi/package.json
@@ -30,14 +30,17 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.4.0",
-    "@wasmer/wasi": "^0.12.0",
+    "@wasmer/wasi": "^1.1.2",
     "@wasmer/wasmfs": "^0.12.0",
     "prettier": "^2.5.1",
     "rollup": "^2.62.0",
     "ts-jest": "^27.1.2",
+    "jest": "^27",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@Michael-F-Bryan/ruby": "/tmp/Michael-F-Bryan/ruby/",
+    "@types/node": "^18.8.2",
     "tslib": "^2.3.1"
   }
 }
